(Client) Fix UploadEndpointDialog overflow: add mat-dialog-content

--- a/client/local-uploader-view/local-uploader-view.component.scss
+++ b/client/local-uploader-view/local-uploader-view.component.scss
@@ -4,6 +4,9 @@
 	width: 100%;
 	flex-direction: row;
 }
+mat-checkbox {
+	margin-bottom: 10px;
+}
 mat-card {
 	margin: 8px;
 	width: 100%;
